--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+absl-py==2.3.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.12
+aiosignal==1.3.2
 anyio==4.9.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==21.2.0
@@ -18,12 +22,15 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
 fonttools==4.58.2
 fqdn==1.5.1
+frozenlist==1.7.0
 fsspec==2025.5.1
+grpcio==1.73.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -49,11 +56,15 @@ jupyterlab==4.4.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.8
+lightning==2.5.1.post0
+lightning-utilities==0.14.3
+Markdown==3.8
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mistune==3.1.3
 mpmath==1.3.0
+multidict==6.4.4
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -61,15 +72,19 @@ nest-asyncio==1.6.0
 networkx==3.5
 notebook_shim==0.2.4
 numpy==2.3.0
+openpyxl==3.1.5
 overrides==7.7.0
-packaging==25.0
+packaging==24.2
 pandas==2.3.0
 pandocfilters==1.5.1
 parso==0.8.4
 pillow==11.2.1
+pina-mathlab==0.2.1.post250505
 platformdirs==4.3.8
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
+propcache==0.3.2
+protobuf==6.31.1
 psutil==7.0.0
 pure_eval==0.2.3
 pycparser==2.22
@@ -77,6 +92,7 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+pytorch-lightning==2.5.1.post0
 pytz==2025.2
 pywin32==310
 pywinpty==2.0.15
@@ -97,11 +113,17 @@ soupsieve==2.7
 stack-data==0.6.3
 sympy==1.14.0
 tabulate==0.9.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorboardX==2.6.4
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 torch==2.7.1
+torch-geometric==2.6.1
+torchmetrics==1.7.2
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 typing_extensions==4.14.0
@@ -112,3 +134,5 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
+yarl==1.20.1
